Fix some layout issues

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -10,6 +10,7 @@
     color: $color--opui-black;
     padding: 11px 0;
     margin-bottom: 0.5rem;
+    display: inline-block;
 }
 
 .#{$op-prefix}form-control {
