--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -38,6 +38,7 @@
                     padding: 0 0 5px 30px;
                     position: relative;
                     line-height: initial;
+                    margin: 0 0 5px 0;
 
                     [class^="#{$op-prefix}icon"], [class*=" #{$op-prefix}icon"] {
                         position: absolute;
@@ -77,6 +78,7 @@
             font-size: 20px;
             font-weight: 600;
             line-height: 74px;
+            margin: 0 0 5px 0;
         }
 
         .#{$op-prefix}settings-container {
