--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,6 +1,10 @@
 .op-plugin-app-container {
     margin-left: 0;
     font-size: 2.56rem;
+
+    * {
+        box-sizing: border-box;
+    }
 }
 
 .#{$op-prefix}main {
